# lzham

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: compress.rs  decompress.rs  lib.rs  low.rs
src/low/: compression.rs  decompression.rs  traits.rs
src/low/compression/: structures.rs
src/low/decompression/: structures.rs
